# ESP32-S3

./: .gitattributes  README.md
3.5 PROJECT/: CMakeLists.txt  sdkconfig.old
3.5 PROJECT/components/TFT_eSPI/: TFT_config.h  User_Setup.h  User_Setup_Select.h
3.5 PROJECT/components/UI/: ui.h
3.5 PROJECT/components/lvgl-3/src/examples/assets/: dowmblack.c  toppic.c
ESP-IDF_Project/: sdkconfig
ESP-IDF_Project/components/TFT_eSPI/: TFT_eSPI.h
ESP-IDF_Project/components/TFT_eSPI/Extensions/: Sprite.cpp
ESP-IDF_Project/components/TFT_eSPI/User_Setups/: Setup21_ILI9488.h
ESP-IDF_Project/components/UI/: CMakeLists.txt
ESP-IDF_Project/components/lvgl-3/src/examples/assets/: offpic.c
ESP-IDF_Project/main/: WZ3248R035.cpp
Esp-idf-project/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Esp-idf-project/components/LovyanGFX-master/: CMakeLists.txt
Esp-idf-project/components/lvgl-3/: lv_conf.h
Esp-idf-project/main/: CMakeLists.txt  TerminalRGB.cpp
MICROPYTHON-PROJECT/PROJECT/: README.md
PLATFORMIO-PROJECT/PROJECT/: platformio.ini
PLATFORMIO-PROJECT/PROJECT/src/: FT6236.cpp  main.cpp
PROJECT/components/TFT_eSPI/: CMakeLists.txt
PROJECT/components/UI/: ui.c  ui_img_480x320_r035_png.c
PROJECT/components/lvgl-3/: lv_conf.h
PROJECT/components/lvgl-3/src/demos/widgets/: lv_demo_widgets.c
PROJECT/components/lvgl-3/src/examples/assets/: dowm.c  onpic.c
PROJECT/main/: CMakeLists.txt
platformIO/: README.md
platformIO/LVGL-RGB/.pio/libdeps/esp32-s3-devkitc-1/LovyanGFX/: .piopm
platformIO/Reference code/: main.cpp
(+1 files in other folders)
