idf_component_register(SRCS "TerminalRGB.cpp""../components/FT6236.cpp"           
                       INCLUDE_DIRS "."
                       "../components/arduino-esp32-master"
                       "../components/LovyanGFX-master"
                       "../components/lvgl-3"
                       )
